--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -89,6 +89,9 @@
     0 2px 6px rgba(var(--gray), 25%), 0 8px 24px rgba(var(--gray), 33%),
     0 16px 32px rgba(var(--gray), 33%);
 
+  --bg-0: #fff;
+  --bg-1: var(--base4);
+  --bg-2: #e8e8e8;
   --main-border-color: #e6e6e6;
 
   --font-heading: "Source Serif 4", serif;
@@ -98,7 +101,7 @@
 
 /* KaTeX Math Styling */
 .katex {
-  font-size: 1.2em;
+  font-size: 1.1em;
 }
 
 .katex-display {
@@ -128,6 +131,9 @@
   --gray-dark: 229, 231, 235; /* Prose text */
   --gray-gradient:
     rgba(0, 43, 54, 0.8), #002b36; /* Solarized base03 gradient */
+  --bg-0: #002b36;
+  --bg-1: var(--sol-dark-4);
+  --bg-2: var(--sol-dark-2);
   --box-shadow:
     0 2px 6px rgba(0, 0, 0, 40%), 0 8px 24px rgba(0, 0, 0, 50%),
     0 16px 32px rgba(0, 0, 0, 50%);
